# MRFLSSVM

./: .gitignore
CyInf/: GraphSimp.cpp
CyLSVM/: CCyHelper.pyx  CythonWrapper.c  CythonWrapper.h  Makefile  PyLSVM.py  cysvm.out  setup.py  test.c  test.h  test.pyx  testcc.c  ttt.c  ttt.h
CyLSVM/CyInf/: GraphCy.cpp  GraphSimp.h  setup.py
CyLSVM/Utils/: ReadMat.py
CyLSVM/cysvm.out.dSYM/Contents/: Info.plist
CyLSVM/cysvm.out.dSYM/Contents/Resources/DWARF/: cysvm.out
CyLSVM/latentssvm/: CMakeLists.txt  CythonWrapper.c  CythonWrapper.h  Makefile  svm_struct_latent_cccp.c  ttt.c
CyLSVM/latentssvm_nlp/: CMakeLists.txt  Makefile  example.model  np_helper.cc  np_helper.cpp  svm_coref_classify  svm_coref_learn  svm_struct_latent_api.c  svm_struct_latent_api_types.h  svm_struct_latent_cccp.c
CyLSVM/latentssvm_nlp/svm_light/: Makefile
CyLSVM/tmpData/: devInfCPPt0.pickle
CyLatentSVM/: README.TXT  beforeResult.md  np_helper.cc  svm_coref_classify  svm_struct_latent_classify.c
CyLatentSVM/CyLSVM/: Makefile  PyLSVM.py  testcc.c
MRFLSSVM/: CMakeLists.txt  README.md  mrf_helper.cpp  mrf_helper.h  muc6-october.train  pairwise.txt  svm_struct_latent_api.c  svm_struct_latent_api_types.h  svm_struct_latent_cccp.c
MRFLSSVM/Checkboard/: CMakeLists.txt  Checkboard.cpp  Checkboard.h  example1  example1.cpp  main.cpp
MRFLSSVM/svm_light/: svm_classify  svm_learn
MRFLatentSSVM/: CMakeLists.txt  Makefile  checkboard_helper.cpp  checkboard_helper.h  mrf_helper.cpp  mrf_helper.h  svm_struct_latent_api.c  svm_struct_latent_api_types.h
MRFLatentSSVM/maxflow-v3.03.src/: Makefile
MRFLatentSSVM/svm_light/: CMakeLists.txt
PyMRFLSSVM/: BatchPlots.py  Batch_CCCP.py  Batch_MRF_Helpers.py  CCCP.py  Checkboard.py  Experiments.py  GrabCutExperiments.py  GrabCutStats.py  LinEnvLearn.py  MRF_Helpers.py  MrfTypes.py  Multiprocess.py  MultiprocessGrabCut.py  PlotScript.py  ReportPlots.py  bgd_convDeterms.txt  bgd_inverseConv.txt  bgd_model.txt  fgd_convDeterms.txt  fgd_inverseConv.txt  fgd_model.txt  linEnvLearn.py  main.py  nohup.out  sink_unary.txt  source_unary.txt  sym_inactive.pickle  testErrors.py  testplot.py
PyMRFLSSVM/CyInf/: CMakeLists.txt  GraphCut.cpp  GraphCut.h  GraphCy.pyx  InfAlgo.py  WllepGraphCut.cpp  WllepGraphCut.pyx  setup.py  testCases.py
PyMRFLSSVM/CyInf/macBuild/: WllepGraphCut.pyx
PyMRFLSSVM/ExpPlots/: GrabCutPlots.py  __init__.py
PyMRFLSSVM/GrabCut/: GMM_Unary.py  GrabCutInstance.py  Superpixel.py  Superpixel_SLIC.py  debug_script.py
PyMRFLSSVM/GrabCut/Data/grabCut/: README  data-readme
PyMRFLSSVM/Utils/: IOhelpers.py  ReadMat.py  draft.txt  tempPickle.py
PyMRFLSSVM/expData/batchResult/temp/: balanced_portions_124678_outer_iter0.pickle  balanced_portions_124678_outer_iter1.pickle  balanced_portions_124678_outer_iter2.pickle  balanced_portions_124678_outer_iter3.pickle  bush.pickle_outer_iter0.pickle  more_black_3339_outer_iter0.pickle  more_black_3339_outer_iter1.pickle  more_black_3339_outer_iter2.pickle  more_black_3339_outer_iter3.pickle  more_black_3339_outer_iter4.pickle  more_black_3339_outer_iter5.pickle  more_white_1777_outer_iter0.pickle  more_white_1777_outer_iter1.pickle  more_white_1777_outer_iter2.pickle  more_white_1777_outer_iter3.pickle  more_white_1777_outer_iter4.pickle  outer_iter0.pickle  outer_iter1.pickle  outer_iter2.pickle  outer_iter3.pickle
PyMRFLSSVM/expData/batchResult/training_result/: image0_outer_history.pickle  image_balanced_portions_124678_outer_history.pickle  image_more_black_3339_outer_history.pickle  image_more_white_1777_outer_history.pickle
PyMRFLSSVM/tmpData/: learnPairwise.mat  linEnvLearn.mat  testInf.mat
latentnpcoref_v0.12/: CMakeLists.txt  DisjointSets.cpp  DisjointSets.h  README.TXT  example.model  np_helper.h  svm_coref_learn  svm_struct_latent_api.h
latentssvm_v0.12/: CMakeLists.txt  svm_latent_classify  svm_latent_learn
testCython/: Makefile  cysvm.out  test.c  test.pyx  test_api.h  testcc.c
testCython/cysvm.out.dSYM/Contents/Resources/DWARF/: cysvm.out
